# fabulous-board-example

./: .gitignore  README.md
bitstream_upload_python/: .gitignore  README.md  (+3 more)
gpio_test/: .gitignore  CMakeLists.txt  README.md
gpio_test/build_custom_firmware/: .gitignore  Makefile  README.md  add_ff_to_bitstream.py  custom_firmware.c  custom_firmware.hex  custom_firmware.hex.orig  custom_firmware.lst  custom_firmware_nucleo_bitstream_upload.c  gpio_config_data.c  gpio_config_data.py  gpio_config_def.py  gpio_config_firmware.c  gpio_config_io.py  io_def.c  software_uart_firmware.c  upload_bistream.c  upload_bistream.h
gpio_test/build_efpga_firmware/: .gitignore  Makefile  README.md  bitstream_bitbang_upload_firmware.c  custom_firmware.c  custom_firmware_nucleo_bitstream_upload.c  firmware_no_io_config.c  gpio_config_firmware.c  gpio_config_firmware_MPW2.c  gpio_config_firmware_MPW5.c  gpio_config_io_MPW2.py  gpio_config_io_MPW5.py  software_uart_firmware.c  uart_communication_firmware.c
gpio_test/build_firmware_template/: Makefile  gpio_test.c
gpio_test/firmware_helpers/: CMakeLists.txt  io_def.h  upload_bistream.c  upload_bistream.h
gpio_test/firmware_helpers/bitstream/: .gitignore  README.md
gpio_test/firmware_helpers/global_defs/: global_defs.h
gpio_test/firmware_helpers/gpio/: gpio.c  gpio.h
gpio_test/firmware_helpers/helpers/: helpers.c  helpers.h
gpio_test/firmware_helpers/io_def/: io_def.c  io_def.h
gpio_test/firmware_helpers/register_actions/: register_actions.c  register_actions.h
gpio_test/firmware_helpers/uart/: custom_uart.c  custom_uart.h  software_uart.c  software_uart.h
gpio_test/firmware_helpers/upload_bitstream/: upload_bitstream.c  upload_bitstream.h
gpio_test/gpio_config/: .gitignore  CMakeLists.txt  gpio_config_builder.py  gpio_config_checker.py  gpio_config_data_sample.h  gpio_config_io.c  gpio_config_io.h  gpio_config_simulator.py
gpio_test/gtest/: CMakeLists.txt  add_ff_to_bitstream.py  bitstream_tests.cpp  fff.h  gpio_tests.cpp  register_tests.cpp  tests.cpp
gpio_test/hw/: CMakeLists.txt  common.h
gpio_test/mocks/: CMakeLists.txt
gpio_test/mocks/firmware_helpers_mock/: CMakeLists.txt
gpio_test/mocks/firmware_helpers_mock/inc/: bitstream_mock.h  gpio_mock.h  io_def_mock.h  register_actions_mock.h  upload_bitstream_mock.h
gpio_test/mocks/firmware_helpers_mock/src/: bitstream_mock.c  gpio_mock.c  io_def_mock.c  register_actions_mock.c  upload_bitstream_mock.c
gpio_test/mocks/gpio_config_mock/: CMakeLists.txt
gpio_test/mocks/gpio_config_mock/inc/: gpio_config_data_mock.h  gpio_config_io_mock.h
gpio_test/mocks/gpio_config_mock/src/: gpio_config_data_mock.c  gpio_config_io_mock.c
gpio_test/nucleo_firmware/: .gitignore  Makefile  README.md  config_io_o.c  run_multiple_voltages.sh
gpio_test/nucleo_firmware/gpio_config_files/part_0/: gpio_config_def_part_0_1_45_V.py  gpio_config_def_part_0_1_6_V.py  gpio_config_def_part_0_1_8_V.py
gpio_test/nucleo_firmware/gpio_config_files/part_1/: gpio_config_def_part_1_1_45_V.py  gpio_config_def_part_1_1_6_V.py
gpio_test/nucleo_firmware/gpio_config_files/part_10/: gpio_config_def_part_10_1_5_V.py
gpio_test/nucleo_firmware/gpio_config_files/part_11/: gpio_config_def_part_11_1_5_V.py
gpio_test/nucleo_firmware/gpio_config_files/part_12/: gpio_config_def_part_12_1_5_V.py
gpio_test/nucleo_firmware/gpio_config_files/part_13/: gpio_config_def_part_13_1_5_V.py
gpio_test/nucleo_firmware/gpio_config_files/part_15/: gpio_config_def_part_15_1_5_V.py
gpio_test/nucleo_firmware/gpio_config_files/part_16/: gpio_config_def_part_16_1_5_V.py
gpio_test/nucleo_firmware/gpio_config_files/part_2/: gpio_config_def_part_2_1_45_V.py  gpio_config_def_part_2_1_6_V.py  gpio_config_def_part_2_1_8_V.py
gpio_test/nucleo_firmware/gpio_config_files/part_3/: gpio_config_def_part_3_1_45_V.py  gpio_config_def_part_3_1_6_V.py  gpio_config_def_part_3_1_8_V.py
gpio_test/nucleo_firmware/gpio_config_files/part_4/: gpio_config_def_part_4_1_45_V.py  gpio_config_def_part_4_1_6_V.py  gpio_config_def_part_4_1_8_V.py
gpio_test/nucleo_firmware/gpio_config_files/part_5/: gpio_config_def_part_5_1_45_V.py  gpio_config_def_part_5_1_6_V.py  gpio_config_def_part_5_1_8_V.py
gpio_test/nucleo_firmware/gpio_config_files/part_50/: gpio_config_def_part_50_1_5_V.py
gpio_test/nucleo_firmware/gpio_config_files/part_51/: gpio_config_def_part_51_1_5_V.py
gpio_test/nucleo_firmware/gpio_config_files/part_52/: gpio_config_def_part_52_1_5_V.py
gpio_test/nucleo_firmware/gpio_config_files/part_53/: gpio_config_def_part_53_1_5_V.py
gpio_test/nucleo_firmware/gpio_config_files/part_54/: gpio_config_def_part_54_1_5_V.py  gpio_config_def_part_54_1_8_V.py
gpio_test/nucleo_firmware/gpio_config_files/part_55/: gpio_config_def_part_55_1_5_V.py
gpio_test/nucleo_firmware/gpio_config_files/part_56/: gpio_config_def_part_56_1_5_V.py
gpio_test/nucleo_firmware/gpio_config_files/part_57/: gpio_config_def_part_57_1_5_V.py
gpio_test/nucleo_firmware/gpio_config_files/part_58/: gpio_config_def_part_58_1_5_V.py
gpio_test/nucleo_firmware/gpio_config_files/part_59/: gpio_config_def_part_59_1_5_V.py
gpio_test/nucleo_firmware/gpio_config_files/part_6/: gpio_config_def_part_6_1_45_V.py  gpio_config_def_part_6_1_6_V.py  gpio_config_def_part_6_1_8_V.py
gpio_test/nucleo_firmware/gpio_config_files/part_60/: gpio_config_def_part_60_1_5_V.py
gpio_test/nucleo_firmware/gpio_config_files/part_61/: gpio_config_def_part_61_1_5_V.py
gpio_test/nucleo_firmware/gpio_config_files/part_62/: gpio_config_def_part_62_1_5_V.py
gpio_test/nucleo_firmware/gpio_config_files/part_63/: gpio_config_def_part_63_1_5_V.py
gpio_test/nucleo_firmware/src/: boot.mpy  flash.mpy  flash.py  gpio_config_builder.mpy  gpio_config_builder.py  i2c.mpy  i2c.py  io_config.mpy  io_config.py  nucleo_api.mpy  send_packet.c  send_packet.h
gpio_test/riscv_firmware_src/: CMakeLists.txt  csr-defs.h  csr.h  defs.h  irq.h  irq_vex.h  isr.c  local_defs.h  print_io.c  print_io.h  soc.h  stub.c  stub.h  system.h  uart.h
gpio_test/util/: caravel_hkdebug.py  caravel_hkflash.py
(+108 files in other folders)
